@@ -417,7 +417,7 @@ public class Activator extends AbstractUIPlugin {
 		try {
 			URL url = new URL(HELP_LOC + "?systemhash=" + systemhash);
 			String content= IOUtils.toString( url, Charset.defaultCharset());
-			isPatron = new Boolean(content.length() < 1000);
+			isPatron = Boolean.valueOf(content.length() < 1000);
 
 		} catch ( Exception e) {
 			//Ignore the download error. This will make the code try again later
